--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
     "@workos-inc/authkit-react": "^0.13.0",
+    "@workos-inc/node": "^7.73.0",
     "better-sqlite3": "^9.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.30.0",
     "drizzle-orm": "^0.39.0",
+    "jose": "^6.1.1",
     "lucide-react": "^0.544.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
