--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.13.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/themes": "^3.2.1",
     "@sentry/tanstackstart-react": "^10.22.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
@@ -32,6 +36,7 @@
     "@tanstack/router-plugin": "^1.132.0",
     "@workos-inc/authkit-react": "^0.13.0",
     "@workos-inc/node": "^7.73.0",
+    "@workos-inc/widgets": "^1.5.0",
     "better-sqlite3": "^9.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
