--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vinxi/react": "^0.2.5",
     "clsx": "^2.1.1",
     "convex": "^1.24.2",
+    "jszip": "^3.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.9.6",
