--- a/package.json
+++ b/package.json
@@ -36,23 +36,23 @@
     "destroy": "alchemy destroy"
   },
   "dependencies": {
-    "dotenv": "^17.2.2",
-    "zod": "^4.1.11"
+    "dotenv": "^17.2.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
-    "turbo": "^2.5.4",
     "@biomejs/biome": "2.3.8",
-    "ultracite": "6.3.8",
+    "@cloudflare/workers-types": "^4.20251128.0",
+    "@types/node": "^22.19.1",
+    "alchemy": "^0.78.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
-    "@types/node": "^22.13.11",
-    "alchemy": "^0.77.0",
-    "@cloudflare/workers-types": "^4.20250822.0"
+    "lint-staged": "^16.2.7",
+    "turbo": "^2.6.1",
+    "ultracite": "6.3.8"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
       "bun x ultracite fix"
     ]
   },
-  "packageManager": "bun@1.3.1"
+  "packageManager": "bun@1.3.3"
 }
