--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,13 +2,20 @@
   "name": "server",
   "main": "src/index.ts",
   "type": "module",
+  "exports": {
+    "./alchemy": {
+      "bun": "./alchemy.run.ts",
+      "types": "./alchemy.run.ts"
+    }
+  },
   "scripts": {
     "build": "tsdown",
     "check-types": "tsc -b",
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
-    "dev": "alchemy dev",
-    "deploy": "alchemy deploy",
-    "destroy": "alchemy destroy"
+    "start": "bun run dist/index.js",
+    "dev": "alchemy dev --app server",
+    "deploy": "alchemy deploy --app server",
+    "destroy": "alchemy destroy --app server"
   },
   "dependencies": {
     "hono": "catalog:",
