--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@biomejs/biome": "2.3.8",
     "@cloudflare/workers-types": "^4.20251202.0",
     "@types/node": "^22.19.1",
-    "alchemy": "^0.79.0",
+    "alchemy": "catalog:",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "turbo": "^2.6.1",
