deps: add server workspace dependency to packages
- Add 'server': 'workspace:*' to api, auth, and db packages
- Update db package to use server workspace instead of direct libsql deps
- Add @cloudflare/workers-types to db devDependencies

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,6 +26,7 @@
     "dotenv": "catalog:",
     "zod": "^4.1.11",
     "@pagehaven/auth": "workspace:*",
-    "@pagehaven/db": "workspace:*"
+    "@pagehaven/db": "workspace:*",
+    "server": "workspace:*"
   }
 }
