--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -20,6 +20,7 @@
     "better-auth": "catalog:",
     "dotenv": "catalog:",
     "zod": "^4.1.11",
-    "@pagehaven/db": "workspace:*"
+    "@pagehaven/db": "workspace:*",
+    "server": "workspace:*"
   }
 }
