fix: remove server workspace dependencies and fix import paths
- Remove circular 'server' workspace dependencies from api, auth, and db packages
- Fix env.d.ts import paths to use correct relative paths to alchemy.run
- Update bun.lock to reflect dependency changes

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,7 +26,6 @@
     "dotenv": "catalog:",
     "zod": "^4.1.11",
     "@pagehaven/auth": "workspace:*",
-    "@pagehaven/db": "workspace:*",
-    "server": "workspace:*"
+    "@pagehaven/db": "workspace:*"
   }
 }
