--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     ],
     "catalog": {
       "hono": "^4.10.7",
+      "@cloudflare/workers-types": "^4.20251202.0",
+      "@orpc/client": "^1.12.2",
       "@orpc/server": "^1.12.2",
       "@orpc/openapi": "^1.12.2",
       "@orpc/zod": "^1.12.2",
       "better-auth": "^1.4.4",
       "dotenv": "^17.2.3",
       "alchemy": "^0.79.0",
-      "@orpc/client": "^1.12.2",
       "drizzle-orm": "^0.44.7"
     }
   },
@@ -44,7 +45,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
-    "@cloudflare/workers-types": "^4.20251202.0",
+    "@cloudflare/workers-types": "catalog:",
     "@types/node": "^22.19.1",
     "alchemy": "catalog:",
     "husky": "^9.1.7",
