--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,7 +9,11 @@
     }
   },
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
+  },
   "devDependencies": {
     "@pagehaven/config": "workspace:*"
   },
