chore: configure local SonarQube and update ignores
Gitignore updates:
- Added .scannerwork, sonarqube_* volumes, report/

Biome ignores:
- Added build/, coverage/, report/, .scannerwork

SonarQube setup:
- Added docker-compose.sonar.yml for local SonarQube
- Added sonar-scanner dependency
- Scripts: sonar:up, sonar:down, sonar

Usage:
  bun run sonar:up     # Start SonarQube (wait ~2min)
  bun run test:coverage # Generate coverage
  bun run sonar        # Run analysis (needs token from localhost:9000)
  bun run sonar:down   # Stop SonarQube

--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,15 @@ lerna-debug.log*
 coverage
 .nyc_output
 
+# SonarQube
+.scannerwork
+sonarqube_data
+sonarqube_logs
+sonarqube_extensions
+
 # Misc
 *.tgz
 .cache
 tmp
 temp
+report
