--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,11 @@
-# SonarCloud Configuration
-# See https://docs.sonarcloud.io/advanced-setup/ci-based-analysis/sonarscanner-for-npm/
+# SonarQube/SonarCloud Configuration
+# Local: docker compose -f docker-compose.sonar.yml up -d
+# Then: bun run sonar
 
-# Project identification (update these for your organization)
-sonar.organization=your-org
-sonar.projectKey=your-org_pagehaven
+# Project identification
+# For SonarCloud, set sonar.organization and update projectKey
+# sonar.organization=your-org
+sonar.projectKey=pagehaven
 
 # Project metadata
 sonar.projectName=Pagehaven
@@ -11,7 +13,7 @@ sonar.projectVersion=1.0.0
 
 # Source configuration
 sonar.sources=apps,packages
-sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.d.ts,**/migrations/**,**/routeTree.gen.ts,**/*.config.ts,**/*.config.js,**/alchemy.run.ts
+sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.d.ts,**/migrations/**,**/routeTree.gen.ts,**/*.config.ts,**/*.config.js,**/alchemy.run.ts,**/coverage/**,**/report/**
 
 # Test configuration
 sonar.tests=apps,packages
