chore: fix sonar scanner env loading and coverage path
- Added dotenv-cli for proper env var loading
- Updated sonar script to use dotenv
- Fixed LCOV path to packages/api/coverage/lcov.info
- Added SONAR_TOKEN to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
+# Alchemy secret, generate with openssl rand -base64 32
 ALCHEMY_PASSWORD=
+
+# SonarQube (local analysis)
+# Generate at http://localhost:9000 -> Account -> Security -> Generate Token
+SONAR_TOKEN=
