feat(static): add static site worker for serving hosted sites
- Create apps/static worker with Alchemy IaC for D1, R2, KV bindings
- Implement static file serving with Better-Auth session extraction
- Add access control: public, password, private, owner_only modes
- Add gate page redirects for unauthorized access
- Complete gate/denied page UI with reason-specific messages
- Enhance dashboard with site stats and recent sites grid
- Add invite management UI to site settings for private sites

--- a/turbo.json
+++ b/turbo.json
@@ -22,6 +22,10 @@
       "cache": false
     },
     "server#destroy": {
+      "dependsOn": ["web#destroy", "static#destroy"],
+      "cache": false
+    },
+    "static#destroy": {
       "dependsOn": ["web#destroy"],
       "cache": false
     },
