--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "dev:native": "turbo -F native dev",
     "dev:web": "turbo -F web dev",
     "dev:server": "turbo -F server dev",
+    "dev:static": "turbo -F static dev",
     "deploy": "turbo deploy --ui=stream",
     "deploy:web": "turbo -F web deploy",
     "deploy:server": "turbo -F server deploy",
+    "deploy:static": "turbo -F static deploy",
     "destroy": "turbo destroy --ui=stream",
     "destroy:web": "turbo -F web destroy",
     "destroy:server": "turbo -F server destroy",
+    "destroy:static": "turbo -F static destroy",
     "db:generate": "turbo -F @pagehaven/db db:generate",
     "db:push": "turbo -F @pagehaven/db db:push",
     "db:studio": "turbo -F @pagehaven/db db:studio",
