chore: clean up unused dependencies and add code splitting
- Add knip.json config to ignore false positives (cloudflare, lint-staged, alchemy, etc.)
- Remove unused dependencies across packages:
  - apps/web: @hookform/resolvers, @orpc/server, postcss
  - apps/server: better-auth, @pagehaven/db (accessed via workspace packages)
  - apps/static: better-auth (accessed via @pagehaven/auth)
  - packages/api: @orpc/client, @orpc/openapi, @orpc/zod, dotenv
  - packages/auth: dotenv, zod
  - packages/db: zod
  - root: zod
- Add Vite manual chunks config to split bundle and eliminate chunk size warnings
- All analysis tools now pass: knip, biome, tsc, tests

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -23,7 +23,6 @@
   },
   "dependencies": {
     "drizzle-orm": "catalog:",
-    "dotenv": "catalog:",
-    "zod": "^4.1.11"
+    "dotenv": "catalog:"
   }
 }
