--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "sonar": "dotenv -- sonar-scanner -Dsonar.host.url=http://localhost:9000 -Dsonar.token=$SONAR_TOKEN"
   },
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "zod": "^4.1.13"
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
