chore: update dependencies via taze
Updated packages:
- turbo: 2.6.1 → 2.6.2
- better-auth: 1.4.4 → 1.4.5
- typescript: 5.8.x → 5.9.3
- wrangler: 4.40.3 → 4.52.1
- @tanstack/react-router: 1.114.x → 1.139.14
- @tanstack/react-query: 5.85.5 → 5.90.11
- @tanstack/react-form: 1.12.3 → 1.27.0
- vite: 6.2.2 → 6.4.1
- tailwindcss: 4.0.15 → 4.1.17
- drizzle-kit: 0.31.2 → 0.31.7
- And various other minor/patch updates

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,22 +18,22 @@
     "destroy": "alchemy destroy --app server"
   },
   "dependencies": {
-    "hono": "catalog:",
-    "@orpc/server": "catalog:",
     "@orpc/openapi": "catalog:",
+    "@orpc/server": "catalog:",
     "@orpc/zod": "catalog:",
-    "dotenv": "catalog:",
-    "zod": "^4.1.11",
     "@pagehaven/api": "workspace:*",
-    "@pagehaven/auth": "workspace:*"
+    "@pagehaven/auth": "workspace:*",
+    "dotenv": "catalog:",
+    "hono": "catalog:",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
-    "typescript": "^5.8.2",
-    "tsdown": "^0.16.5",
+    "@cloudflare/workers-types": "catalog:",
     "@pagehaven/config": "workspace:*",
+    "@types/node": "^22.19.1",
     "alchemy": "catalog:",
-    "wrangler": "^4.40.3",
-    "@types/node": "^22.13.11",
-    "@cloudflare/workers-types": "catalog:"
+    "tsdown": "^0.16.8",
+    "typescript": "^5.9.3",
+    "wrangler": "^4.52.1"
   }
 }
