--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,40 +20,40 @@
     "destroy": "alchemy destroy --app web"
   },
   "dependencies": {
-    "radix-ui": "^1.4.2",
-    "@tanstack/react-form": "^1.12.3",
-    "@tailwindcss/vite": "^4.0.15",
-    "@tanstack/react-router": "^1.114.25",
+    "@orpc/client": "catalog:",
+    "@orpc/tanstack-query": "^1.12.2",
+    "@pagehaven/api": "workspace:*",
+    "@pagehaven/auth": "workspace:*",
+    "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-form": "^1.27.0",
+    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-router": "^1.139.14",
+    "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.473.0",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.2.5",
-    "zod": "^4.0.2",
-    "@orpc/tanstack-query": "^1.10.0",
-    "@orpc/client": "catalog:",
-    "@tanstack/react-query": "^5.85.5",
-    "better-auth": "catalog:",
-    "@pagehaven/api": "workspace:*",
-    "@pagehaven/auth": "workspace:*",
-    "server": "workspace:*"
+    "server": "workspace:*",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "catalog:",
-    "@tanstack/react-router-devtools": "^1.114.27",
-    "@tanstack/router-plugin": "^1.114.27",
-    "@types/node": "^22.13.13",
-    "@types/react": "~19.1.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.8.3",
-    "tailwindcss": "^4.0.15",
-    "vite": "^6.2.2",
-    "@tanstack/react-query-devtools": "^5.85.5",
-    "alchemy": "catalog:"
+    "@tanstack/react-query-devtools": "^5.91.1",
+    "@tanstack/react-router-devtools": "^1.139.14",
+    "@tanstack/router-plugin": "^1.139.14",
+    "@types/node": "^22.19.1",
+    "@types/react": "~19.1.17",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^4.7.0",
+    "alchemy": "catalog:",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "vite": "^6.4.1"
   }
 }
