--- a/package.json
+++ b/package.json
@@ -53,16 +53,16 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
-    "@cloudflare/workers-types": "catalog:",
+    "@cloudflare/workers-types": "^4.20251202.0",
     "@types/node": "^22.19.1",
     "@vitest/coverage-v8": "^4.0.15",
-    "alchemy": "catalog:",
+    "alchemy": "^0.79.0",
     "dotenv-cli": "^11.0.0",
     "husky": "^9.1.7",
     "jscpd": "^4.0.5",
     "lint-staged": "^16.2.7",
     "sonar-scanner": "^3.1.0",
-    "turbo": "^2.6.1",
+    "turbo": "^2.6.2",
     "ultracite": "6.3.8",
     "vitest": "^4.0.15"
   },
