--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -11,14 +11,14 @@
   "type": "module",
   "scripts": {},
   "devDependencies": {
-    "@pagehaven/config": "workspace:*",
-    "@cloudflare/workers-types": "catalog:"
+    "@cloudflare/workers-types": "catalog:",
+    "@pagehaven/config": "workspace:*"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "better-auth": "catalog:",
-    "@pagehaven/db": "workspace:*"
+    "@pagehaven/db": "workspace:*",
+    "better-auth": "catalog:"
   }
 }
