--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,15 +14,15 @@
     "db:generate": "drizzle-kit generate"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.31.2",
+    "@cloudflare/workers-types": "catalog:",
     "@pagehaven/config": "workspace:*",
-    "@cloudflare/workers-types": "catalog:"
+    "drizzle-kit": "^0.31.7"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "drizzle-orm": "catalog:",
-    "dotenv": "catalog:"
+    "dotenv": "catalog:",
+    "drizzle-orm": "catalog:"
   }
 }
