--- a/apps/static/package.json
+++ b/apps/static/package.json
@@ -1,7 +1,9 @@
 {
   "name": "static",
-  "main": "src/index.ts",
+  "version": "0.0.0",
+  "private": true,
   "type": "module",
+  "main": "src/index.ts",
   "exports": {
     "./alchemy": {
       "bun": "./alchemy.run.ts",
@@ -20,6 +22,7 @@
   "dependencies": {
     "@pagehaven/auth": "workspace:*",
     "@pagehaven/db": "workspace:*",
+    "@pagehaven/infra": "workspace:*",
     "dotenv": "catalog:",
     "drizzle-orm": "catalog:",
     "hono": "catalog:"
