refactor: centralize shared Cloudflare resources in @pagehaven/infra
- Create createSharedResources() helper in packages/infra/src/resources.ts
- D1, R2, KV resources use adopt: true to share by name
- Update server and static to import from @pagehaven/infra/resources
- Remove separate alchemy app from infra package

--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -4,19 +4,12 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": {
-      "default": "./src/index.ts"
-    },
-    "./alchemy": {
-      "bun": "./alchemy.run.ts",
-      "types": "./alchemy.run.ts"
+    "./resources": {
+      "default": "./src/resources.ts"
     }
   },
   "scripts": {
-    "check-types": "tsc -b",
-    "dev": "alchemy dev --app infra",
-    "deploy": "alchemy deploy --app infra",
-    "destroy": "alchemy destroy --app infra"
+    "check-types": "tsc -b"
   },
   "dependencies": {
     "alchemy": "catalog:",
