--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,9 @@
     "serve": "vite preview",
     "start": "vite",
     "check-types": "tsc --noEmit",
+    "test": "vitest run --config vitest.config.ts",
+    "test:coverage": "vitest run --coverage --config vitest.config.ts",
+    "test:watch": "vitest --config vitest.config.ts",
     "dev:alchemy": "alchemy dev --app web",
     "deploy": "alchemy deploy --app web",
     "destroy": "alchemy destroy --app web"
@@ -47,11 +50,16 @@
     "@tanstack/react-query-devtools": "^5.91.1",
     "@tanstack/react-router-devtools": "^1.139.14",
     "@tanstack/router-plugin": "^1.139.14",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.19.1",
     "@types/react": "~19.1.17",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
     "alchemy": "catalog:",
+    "happy-dom": "^20.0.11",
+    "jsdom": "^27.2.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
     "vite": "^6.4.1"
