--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -10,5 +10,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
     "strictNullChecks": true
-  }
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx", "env.d.ts"],
+  "exclude": ["alchemy.run.ts", "dist", "node_modules"]
 }
