test: add database schema and auth form tests
Database Schema Tests (packages/db):
- Site schema: roles, access types, deployment statuses, type safety, edge cases
- Auth schema: user, session, account, verification table structures
- Analytics schema: siteAnalytics, domainVerification table structures
- Add test scripts to db package.json

Web Component Tests (apps/web):
- SignInForm: rendering, inputs, loading state, keyboard navigation
- SignUpForm: rendering, inputs, loading state, keyboard navigation
- UserMenu: authenticated/unauthenticated states, dropdown, sign out

Total: 744 tests passing
- API: 330 tests
- Static: 35 tests
- DB: 120 tests
- Web UI: 259 tests

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,6 +13,8 @@
   },
   "scripts": {
     "check-types": "tsc -b",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate"
   },
