feat: implement cleanup, testing, and CLI deployment tool
- Remove unused happy-dom dependency
- Add tsc to knip ignoreBinaries
- Remove unused dotenv from packages/infra
- Extract shared storage utilities to @pagehaven/db/utils/storage
- Enhance test-utils.tsx with QueryClient and ThemeProvider
- Update header.test.tsx to use shared test-utils
- Add Playwright E2E test setup with home page tests
- Create @pagehaven/cli package with deploy, login, and sites commands

--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -12,8 +12,7 @@
     "check-types": "tsc -b"
   },
   "dependencies": {
-    "alchemy": "catalog:",
-    "dotenv": "catalog:"
+    "alchemy": "catalog:"
   },
   "devDependencies": {
     "@pagehaven/config": "workspace:*"
