--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "db:studio": "turbo -F @pagehaven/db db:studio",
     "test": "turbo test",
     "test:coverage": "turbo test:coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "cpd": "jscpd ./apps ./packages",
     "sonar:up": "docker compose -f docker-compose.sonar.yml up -d",
     "sonar:down": "docker compose -f docker-compose.sonar.yml down",
@@ -54,6 +56,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
     "@cloudflare/workers-types": "^4.20251202.0",
+    "@playwright/test": "^1.57.0",
     "@types/node": "^22.19.1",
     "@vitest/coverage-v8": "^4.0.15",
     "alchemy": "^0.79.0",
