fix: dev:local so cli does not run with turbo dev

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target node",
-    "dev": "bun run ./src/index.ts",
+    "dev:local": "bun run ./src/index.ts",
     "check-types": "tsc -b"
   },
   "dependencies": {
