Add migrations directory

--- a/biome.json
+++ b/biome.json
@@ -23,7 +23,8 @@
       "!**/.source",
       "!**/coverage",
       "!**/report",
-      "!**/.scannerwork"
+      "!**/.scannerwork",
+      "!**/migrations"
     ]
   },
   "extends": ["ultracite/core", "ultracite/react"]
