feat: add comprehensive E2E tests and make domains env-based
- Create E2E test fixtures with signUp, signIn, createSite helpers
- Add auth.spec.ts with 12 tests for authentication flows
- Add sites.spec.ts with 12 tests for site management
- Add deploy.spec.ts with 8 tests for deployment flow
- Update home.spec.ts to match actual UI

- Make static domain configurable via VITE_STATIC_DOMAIN and STATIC_DOMAIN env vars
- Add apps/web/src/utils/config.ts with getSiteUrl and getSiteDisplayDomain helpers
- Update dashboard, sites list, and site detail pages to use config
- Update serve-static.ts to use STATIC_DOMAIN env var

- Update playwright.config.ts to start both API and web servers

--- a/biome.json
+++ b/biome.json
@@ -24,7 +24,8 @@
       "!**/coverage",
       "!**/report",
       "!**/.scannerwork",
-      "!**/migrations"
+      "!**/migrations",
+      "!**/test-results"
     ]
   },
   "extends": ["ultracite/core", "ultracite/react"]
