--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "tsdown",
-    "check-types": "tsc -b",
+    "check-types": "tsc --noEmit",
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
     "start": "bun run dist/index.js",
     "dev": "alchemy dev --app server",
