--- a/apps/static/package.json
+++ b/apps/static/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "tsdown",
-    "check-types": "tsc -b",
+    "check-types": "tsc --noEmit",
     "dev": "alchemy dev --app static",
     "deploy": "alchemy deploy --app static",
     "destroy": "alchemy destroy --app static",
