Add comprehensive unit tests and configure Sonar coverage
- Add tests for apps/web routes (settings, gate/login, sites, sites//*)
- Add tests for packages/cli (commands, lib/config, lib/api)
- Add vitest.config.ts for CLI package
- Fix clearToken bug in CLI config (was not removing token due to merge behavior)
- Update sonar-project.properties with all coverage report paths
- All 449+ tests passing across the monorepo

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "@orpc/tanstack-query": "^1.12.2",
     "@pagehaven/api": "workspace:*",
     "@pagehaven/auth": "workspace:*",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-form": "^1.27.0",
     "@tanstack/react-query": "^5.90.11",
