--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,8 +19,8 @@ sonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.d.ts,**/migratio
 sonar.tests=apps,packages
 sonar.test.inclusions=**/*.test.ts,**/*.spec.ts,**/*.test.tsx,**/*.spec.tsx
 
-# Coverage - reads LCOV from Vitest
-sonar.javascript.lcov.reportPaths=packages/api/coverage/lcov.info
+# Coverage - reads LCOV from Vitest (all packages and apps)
+sonar.javascript.lcov.reportPaths=apps/web/coverage/lcov.info,apps/static/coverage/lcov.info,packages/api/coverage/lcov.info,packages/cli/coverage/lcov.info,packages/db/coverage/lcov.info
 
 # TypeScript configuration
 sonar.typescript.tsconfigPath=tsconfig.json
