refactor: extract shared access control utilities to @pagehaven/api
- Create packages/api/src/lib/access-control.ts with db-dependent access checks
- Create packages/api/src/lib/access-utils.ts with pure utility functions (no db)
- Refactor apps/static/src/index.ts to use shared utilities
- Update serve-static.ts to import from shared access-control module
- Add pattern ignores for alchemy.run.ts boilerplate and site resolution handlers
- Add file ignore for alchemy.run.ts configuration files

Reduces jscpd duplication from 6 clones (0.84%) to 0 clones (0%)

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,6 +7,15 @@
     ".": {
       "default": "./src/index.ts"
     },
+    "./lib/access-control": {
+      "default": "./src/lib/access-control.ts"
+    },
+    "./lib/access-utils": {
+      "default": "./src/lib/access-utils.ts"
+    },
+    "./lib/serve-static": {
+      "default": "./src/lib/serve-static.ts"
+    },
     "./*": {
       "default": "./src/*.ts"
     }
