--- a/apps/static/package.json
+++ b/apps/static/package.json
@@ -20,6 +20,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@pagehaven/api": "workspace:*",
     "@pagehaven/auth": "workspace:*",
     "@pagehaven/db": "workspace:*",
     "@pagehaven/infra": "workspace:*",
