--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,9 +24,10 @@
   },
   "dependencies": {
     "@orpc/client": "catalog:",
-    "@orpc/tanstack-query": "^1.12.2",
+    "@orpc/tanstack-query": "catalog:",
     "@pagehaven/api": "workspace:*",
     "@pagehaven/auth": "workspace:*",
+    "@pagehaven/utils": "workspace:*",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-form": "^1.27.0",
@@ -44,7 +45,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
-    "zod": "^4.1.13"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "catalog:",
@@ -54,14 +55,14 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^22.19.1",
+    "@types/node": "catalog:",
     "@types/react": "~19.1.17",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
     "alchemy": "catalog:",
     "jsdom": "^27.2.0",
     "tailwindcss": "^4.1.17",
-    "typescript": "^5.9.3",
+    "typescript": "catalog:",
     "vite": "^6.4.1"
   }
 }
