--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -2,3 +2,8 @@ BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=
 CORS_ORIGIN=
 STATIC_DOMAIN=
+
+# GitHub OAuth (for repository integration)
+# Create a GitHub App at https://github.com/settings/apps
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
