feat: Phase 3B - GitHub webhook handler for push events
- Create github-webhook.ts with webhook signature verification
- Implement processGitHubPush to handle push events and trigger deployments
- Add getDeploymentContext and getFilesToUpload helper functions
- Fetch repository tree and upload files from GitHub to R2
- Add /api/webhooks/github endpoint to server
- Export github-webhook module from API package

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,6 +16,9 @@
     "./lib/serve-static": {
       "default": "./src/lib/serve-static.ts"
     },
+    "./lib/github-webhook": {
+      "default": "./src/lib/github-webhook.ts"
+    },
     "./*": {
       "default": "./src/*.ts"
     }
