--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,10 +16,11 @@
   },
   "dependencies": {
     "@pagehaven/utils": "workspace:*",
-    "commander": "^14.0.0",
     "chalk": "^5.4.1",
+    "commander": "^14.0.0",
+    "glob": "^11.0.3",
     "ora": "^8.2.0",
-    "glob": "^11.0.3"
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@pagehaven/config": "workspace:*",
