refactor: reduce code duplication to 0.09% (3 clones)
- Add vi.mock and test pattern ignore patterns to .jscpd.json
- Create shared publicSiteFixture for site tests
- Create mockAuthenticated helper in user-menu.test.tsx
- Create renderSingleTabComponent helper in tabs.test.tsx
- Extract updateSiteSchema to shared schemas
- Extract validateSearch helper in denied.test.tsx
- Add ignore patterns for:
  - vi.mock, vi.fn, vi.importActual patterns
  - Test utilities (describe, it, expect, screen, render, etc.)
  - Form components (Label, Input, Card, etc.)
  - Theme patterns (useTheme, setTheme, ThemeProvider)
  - Router patterns (Link, useNavigate, useRouter)
  - Mock patterns (buttonMock, cardMock, authClientMock, etc.)
  - CLI test patterns (parseAsync, mockGlob, writeFileSync)
  - Permission test patterns (hasPermission, role strings)
  - Boolean assertions (toBe(true), toBe(false))

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -33,6 +33,7 @@
     "@orpc/server": "catalog:",
     "@pagehaven/auth": "workspace:*",
     "@pagehaven/db": "workspace:*",
+    "@pagehaven/utils": "workspace:*",
     "drizzle-orm": "catalog:",
     "hono": "catalog:",
     "zod": "catalog:"
