refactor(web): use shared @pagehaven/client package
- Replace direct @orpc/client usage with @pagehaven/client
- Update orpc.ts to use createClient and createLink from shared package
- Update __root.tsx to import AppRouterClient from shared package
- Update tests to mock @pagehaven/client
- Remove unused @pagehaven/api direct dependency

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,9 +23,8 @@
     "destroy": "alchemy destroy --app web"
   },
   "dependencies": {
-    "@orpc/client": "catalog:",
     "@orpc/tanstack-query": "catalog:",
-    "@pagehaven/api": "workspace:*",
+    "@pagehaven/client": "workspace:*",
     "@pagehaven/auth": "workspace:*",
     "@pagehaven/utils": "workspace:*",
     "@radix-ui/react-tabs": "^1.1.13",
