refactor(cli): use shared @pagehaven/client package
- Replace custom fetch-based API with @pagehaven/client/node
- Update api.ts to export getApiClient and createApiClient
- Update all commands (deploy, sites, status, link) to use oRPC client
- Fix type issues with nullable fields and Date types
- Update tsconfig to skip lib check and include env.d.ts files
- Update tests to mock the new client-based API

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,12 +9,13 @@
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target node",
     "dev:local": "bun run ./src/index.ts",
-    "check-types": "tsc -b",
+    "check-types": "tsc --noEmit --skipLibCheck",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@pagehaven/client": "workspace:*",
     "@pagehaven/utils": "workspace:*",
     "chalk": "^5.4.1",
     "commander": "^14.0.0",
