refactor: move CLI from packages to apps
- Move packages/cli to apps/cli for future publishing
- Update tsconfig.json paths to reference packages from new location

--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -8,8 +8,8 @@
   },
   "include": [
     "src/**/*",
-    "../api/env.d.ts",
-    "../auth/env.d.ts",
-    "../db/env.d.ts"
+    "../../packages/api/env.d.ts",
+    "../../packages/auth/env.d.ts",
+    "../../packages/db/env.d.ts"
   ]
 }
