feat: add event-driven dev startup with wait-on for sequential ordering
- Add dev:ready scripts to server (tcp:3000) and static (tcp:3002)
- Configure turbo.json with non-persistent dev:ready tasks
- static#dev depends on server#dev:ready
- web#dev depends on both server#dev:ready and static#dev:ready
- Add wait-on as dev dependency
- Export Server type from server/alchemy.run.ts

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,6 +16,7 @@
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
     "start": "bun run dist/index.js",
     "dev": "alchemy dev --app server",
+    "dev:ready": "wait-on tcp:3000",
     "deploy": "alchemy deploy --app server",
     "destroy": "alchemy destroy --app server"
   },
