--- a/apps/static/package.json
+++ b/apps/static/package.json
@@ -14,6 +14,7 @@
     "build": "tsdown",
     "check-types": "tsc --noEmit",
     "dev": "alchemy dev --app static",
+    "dev:ready": "wait-on tcp:3002",
     "deploy": "alchemy deploy --app static",
     "destroy": "alchemy destroy --app static",
     "test": "vitest run",
